root/static/scss/global.scss
/* float:none prevents the span-x classes from breaking table-cell display */
body {
    background-color: var(--bs-body-bg, #fff);
    color: var(--bs-body-color, #000);
    display: flex;
    flex-direction: column;
    font-family: $font-family-base;
    font-size: $font-size-base;
    height: 100%;
    line-height: $line-height-base;
    min-height: 100vh;
    margin: 0;
    overflow-x: hidden;
}

caption,
th,
td {
    text-align: left;
    font-weight: normal;
    float: none !important;
}

table,
th,
td {
    vertical-align: middle;
}

/* Remove possible quote marks (") from <q>, <blockquote>. */
blockquote:before,
blockquote:after,
q:before,
q:after {
    content: "";
}

blockquote,
q {
    quotes: "" "";
}

legend {
    font-size: 1.1em;
    font-weight: bold;
}

label span {
    display: inline-block;
    width: 125px;
    text-overflow: ellipsis;
    white-space: nowrap;
    img {
        padding: 2px;
        padding-right: 5px;
        float: left;
    }
}

label input[type="text"],
label select {
    width: 200px;
}

code {
    white-space: normal;
}
pre {
    background-color: #f5f5f5;
    border: 1px solid #ccc;
    border-radius: 4px;
    padding: 12px;

    &:has(.syntaxhighlighter) {
        background: none;
        border: none;
        padding: 0;
        border-radius: 0;
    }
}
pre code {
    white-space: pre;
}

kbd {
    background-color: #fcfcfc;
    border-bottom-color: #bbb;
    border-radius: 3px;
    border: solid 1px #ccc;
    box-shadow: inset 0 -1px 0 #bbb;
    color: $text-muted-dark;
    display: inline-block;
    font-size: 11px;
    font-family: $font-family-monospace;
    line-height: 10px;
    padding: 3px 5px;
    vertical-align: middle;
}

table.keyboard-shortcuts th:first-child {
    width: 4em;
}

table.keyboard-shortcuts td.keys {
    text-align: right;
    white-space: nowrap;
}

.strong {
    font-weight: bold;
}

.river-gauge-gauge {
    vertical-align: middle;
}

button.favorite,
a.favorite {
    padding: 1px 3px;
    background-color: #fff;
    opacity: 0.5;
    border-radius: 3px 3px;
    border: solid 1px #666;
    color: #333;
    text-decoration: none;
    display: inline-block;
    line-height: 1;
    text-align: right;
    position: relative;
    font-size: $font-size-base;
    font-weight: normal;
    height: 100%;
    min-width: 35px;
    cursor: pointer;

    span {
        font-weight: normal;
    }

    &.highlight {
        background: #fca216 linear-gradient(to bottom, #ffc874, #fca216);
        color: #fff;
        text-shadow: 0px 1px 1px #333;
        border-color: #d39534;
        opacity: 1;
    }

    &:hover,
    &.active {
        background: $link-color
            linear-gradient(to bottom, $link-color-light, $link-color);
        color: #fff;
        text-shadow: 0px 1px 1px #333;
        border-color: $link-color;
        opacity: 1;
        text-decoration: none;
    }
}

ul {
    list-style-type: none;
}

.activity-graph img {
    max-height: 20px;
    width: 100%;
}
.activity-graph .comment {
    color: $text-muted-dark;
    font-size: 0.8em;
}

.ellipsis {
    white-space: nowrap;
    display: block;
    overflow: hidden;
    width: 100%;
    span {
        display: inline-block;
        vertical-align: bottom;

        &:first-child {
            overflow: hidden;
            text-overflow: ellipsis;
        }
    }
}
a.ellipsis:hover * {
    text-decoration: underline;
}

.btn-link {
    padding: 0;
    border: none;
}

.qtip-github {
    font-size: 12px;
    max-width: 800px;

    .relatized {
        white-space: nowrap;
    }
    .qtip-content {
        padding: 0;
        margin: 0;
        height: auto;
        min-height: auto;
        width: auto;
        min-width: auto;
    }

    table {
        width: 100%;
        td,
        th {
            padding: 3px;
            border: 1px solid #f1f1f1;
        }
        th {
            padding-right: 8px;
            white-space: nowrap;
            background-color: #f9f9f9;
        }
    }
}

.file-table {
    .mtime,
    .size {
        width: 110px;
        font-size: 1em;
    }

    .documentation {
        width: 300px;
        font-size: 1em;
    }

    .name a {
        display: inline-block;
    }

    .browse-details {
        display: block;
        margin-left: 20px;
        font-size: 0.85em;
        color: var(--bs-secondary-color, #6c757d);
    }
}

.file-table td.mtime,
.release-table td.date {
    text-align: right;
}

.icon-grid {
    display: inline-block;
    width: 16px;
    height: 16px;
    background-image: url(/static/icons/grid.svg);
    vertical-align: text-bottom;
    margin-bottom: 1px;
}

.star-rating {
    & a.btn.btn-primary {
        padding: 1px 3px;
        background: #f0f0f0 linear-gradient(to bottom, #fbfbfb, #f0f0f0);
        color: #000;
        position: relative;
        font-size: $font-size-base;
        font-weight: normal;
        min-width: 35px;
        border-color: #e0e0e0;
        line-height: 1;

        &:hover {
            background: $link-color
                linear-gradient(to bottom, $link-color-light, $link-color);
            color: #fff;
            border-color: $link-color;
            opacity: 1;
            text-decoration: none;
        }
    }
}

ul.dependencies {
    padding: 0;
}
ul.dependencies ul {
    padding: 0;
    list-style: none;
}

.smaller {
    font-size: 1em;
    line-height: 2.5em;
}

.no-results {
    text-align: center;

    h4 {
        padding: 7px 0;
        font-weight: bold;
        color: $gray-600;
        text-transform: uppercase;
        font-size: 14px;
    }
}

.news_feed {
    float: right;
}

h1,
.h1,
h2,
.h2,
h3,
.h3 {
    line-height: 1.8em;
}

.black {
    color: $black;
}

.dropdown-menu {
    overflow-y: auto;
    overflow-x: hidden;
    max-height: 250px;
}

.toolbar-search {
    margin-bottom: 2px;
}

.top-input-form {
    border-right: none;
    max-width: 340px;
    width: 100%;
}

.search-form {
    .mb-3 {
        margin: 0;
    }
}

.input-small {
    width: 50% !important;
}

.suggest-author-label {
    font-style: italic;
}

.dropdown-menu form {
    margin: 0;
}

.center {
    text-align: center;
}

.inline {
    display: inline;
}

.box-right {
    float: right;
    clear: right;
    width: ($sidebar-width + 5px);
    padding: 10px 0 0 10px;
    overflow: hidden;
}

.container-top {
    padding: 0 10px 10px 10px;
}

.page-content {
    display: grid;
    align-items: start;
    flex-grow: 1;
    grid-template-areas:
        "menu banner"
        "menu breadcrumbs"
        "menu content"
        "menu pagination";
    grid-template-columns: fit-content($sidebar-width) 1fr;
    grid-template-rows: max-content max-content 1fr max-content;
    line-height: 1.54em;
    margin-top: 57px;
}

.sidebar {
    grid-area: menu;
    align-self: stretch;
}
.top-notify-banner {
    grid-area: banner;
}
.content-navigation {
    grid-area: breadcrumbs;
}
.content-pagination {
    grid-area: pagination;
}

@include media-breakpoint-down(md) {
    .page-content {
        grid-template-columns: 0 1fr;
    }
}

.tool-bar-form {
    margin-top: 2px;
    margin-bottom: 10px;
    height: auto;
    padding: 4px 8px;
}

.top-content {
    padding-bottom: 10px;
}

.message {
    padding-left: 5px;
}

main {
    justify-self: center;
    line-height: 1.54em;
    padding: 40px;
    max-width: 1200px;
    overflow-x: hidden;
    width: 100%;
    grid-area: content;
}

.site-alert-message {
    text-align: center;
    margin: 1px 15% 20px;
}

.dist-release {
    &.status-cpan .release-name {
        color: $text-muted-dark;
    }
    &.status-backpan .release-name {
        color: #a00;
    }
    &.maturity-developer .release-name {
        color: #ff4500;
    }
    &.unauthorized .release-name {
        color: #f00;
    }
    &.unauthorized .warning {
        color: #f00;
        font-weight: bold;
    }
}

.release-banner {
    padding: 0px 4px;
    border-radius: 4px;
    display: inline-block;
    margin-top: 10px;
    margin-bottom: 10px;
    font-weight: bold;
    border-style: solid;
    border-width: 1px;
    border-color: #fff;

    &.maturity-developer {
        color: #fff;
        background-color: $danger;
        border-style: none;
    }
}

.nav-list li.nav-header + li.release-banner,
.nav-list li.release-banner + li.nav-header {
    margin-top: 5px;
}

.page-content * {
    scroll-margin-top: 60px;
}

.slide-out {
    display: grid;
    grid-template-rows: 1fr;
    transition: grid-template-rows 0.3s ease-out;
}
.slide-out-hidden {
    grid-template-rows: 0fr;
}
.slide-out > div {
    overflow: hidden;
}
@media (prefers-reduced-motion: reduce) {
    .slide-out {
        transition: none;
    }
}
.testing-zone {
    color: $danger;
}

.gravatar {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    margin-right: 5px;
    vertical-align: middle;
}

